Measuring ping and averageTick from server

--- a/view/index.html
+++ b/view/index.html
@@ -27,7 +27,9 @@
   </head>
 
   <body>
-    <div class="board"></div>
+    <div class="board-wrapper">
+      <div class="board"></div>
+    </div>
   </body>
 </html>
 
