Testing syncing server and client tick

--- a/view/index.html
+++ b/view/index.html
@@ -27,9 +27,14 @@
   </head>
 
   <body>
+    <div class="tick strobe local-tick"></div>
+    <div class="tick strobe server-tick"></div>
+    <div class="delta"></div>
+
     <div class="board-wrapper">
       <div class="board"></div>
     </div>
+
   </body>
 </html>
 
