--- a/view/style.less
+++ b/view/style.less
@@ -6,6 +6,7 @@ body, html {
   margin: 0;
   background: black;
   perspective: 1200px;
+  overflow: hidden;
 }
 
 .board-wrapper {
@@ -15,8 +16,6 @@ body, html {
 
 .board {
   position: relative;
-  height: 400px;
-  width: 400px;
   background: #111;
   background-color: #111;
   background-image: linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black),
@@ -26,7 +25,6 @@ body, html {
   border: solid 20px #222;
   border-radius: 4px;
   margin: 0 auto;
-
 }
 
 .snek {
@@ -41,7 +39,14 @@ body, html {
     height: ~"calc(100% - 2px)";
     top: 1px;
     left: 1px;
+    // animation: flicker .01s infinite;
   }
+}
+
+@keyframes flicker {
+  0% { opacity: 1;}
+  50% { opacity: .8;}
+  100% { opacity: 1;}
 }
 
 .gone .body {
