--- a/view/index.html
+++ b/view/index.html
@@ -4,6 +4,8 @@
 
     <script src="jquery.js"></script>
     <script src="hammer.js"></script>
+    <script src="particles.js"></script>
+    <script src="sounds.js"></script>
     <script src="jquery.hammer.js"></script>
     <script src="/socket.io.js"></script>
 
@@ -28,7 +30,9 @@
 
   <body>
     <div class="board-wrapper">
-      <div class="board"></div>
+      <div class="board">
+        <div class="border"></div>
+      </div>
     </div>
   </body>
 </html>
