--- a/view/style.less
+++ b/view/style.less
@@ -68,7 +68,7 @@ body, html {
 
 .gone .body {
   background: white !important;
-  // animation: blam .1s ease-out;
+  animation: blam .1s ease-out;
   // animation-fill-mode: forwards;
 }
 
@@ -77,7 +77,7 @@ body, html {
     transform: scale(1);
   }
   100% {
-    transform: scale(.5);
+    transform: scale(0);
   }
 
 }
