--- a/view/index.html
+++ b/view/index.html
@@ -27,10 +27,20 @@
   </head>
 
   <body>
+    <div class="leader">
+      <span class="label">LEADER</span>
+      <div class="leader-boxes"></div>
+      <span class="label">WIN</span>
+    </div>
+
     <div class="board-wrapper">
       <div class="board">
         <div class="border"></div>
       </div>
     </div>
+    <div class="chat-ui">
+      <input type="text" placeholder="send a message"/>
+    </div>
+
   </body>
 </html>
