Added bonk sound

--- a/view/style.less
+++ b/view/style.less
@@ -328,12 +328,13 @@ body, html {
   left: 0;
   width: 20px;
   height: 20px;
-    z-index: 3;
-    transform-style: preserve-3d;
+  z-index: 3;
+  transform-style: preserve-3d;
 
   .body {
     background: white;
     color: black;
+    white-space: nowrap;
     z-index: 3;
     padding: 5px 8px 5px 8px;
     position: absolute;
@@ -346,7 +347,6 @@ body, html {
 
   // transition: linear .2s all;
   // transform: translateY(-25px) translateX(10px);
-
 }
 
 
@@ -366,14 +366,14 @@ body, html {
 
   span {
     position: relative;
-    top: -4px;
-    padding: 0 5px;
+    top: -3px;
+    padding: 0 7px;
   }
 
   .box {
     width: 16px;
     height: 16px;
-    margin: 2px;
+    margin: 1px;
     display: inline-block;
     background: #222;
   }
