--- a/view/style.less
+++ b/view/style.less
@@ -57,6 +57,7 @@ body, html {
     height: ~"calc(100% - 2px)";
     top: 1px;
     left: 1px;
+    // border-bottom: solid 2px rgba(0,0,0,.2);
     // animation: flicker .01s infinite;
   }
 }
@@ -89,14 +90,16 @@ body, html {
 
   .body {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height:100%;
-    background: #e62d0e;
+    top: 1px;
+    left: 1px;
+    width: ~"calc(100% - 2px)";
+    height: ~"calc(100% - 2px)";
+
+    background: white;
     border-radius: 50%;
 
-    animation: pulse .5s infinite;
+    animation: pop .3s, pulse .5s infinite;
+    animation-delay: 0s, .3s;
 
     &:after {
       content: "";
@@ -106,12 +109,24 @@ body, html {
       left: 17%;
       position: absolute;
       border-radius: 50%;
-      opacity: .4;
+      // opacity: .4;
       background: white;
 
     }
   }
 }
+@keyframes pop {
+  0% {
+    transform: scale(.6);
+  }
+  60% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 
 @keyframes pulse {
   0% {
@@ -257,13 +272,13 @@ body, html {
     transform: translateX(-10px) translateY(-10px);
   }
   25% {
-    transform: translateX(10px) translateY(-10px) rotate(1deg);
+    transform: translateX(10px) translateY(10px) rotate(1deg);
   }
   50% {
-    transform: translateX(-5px) translateY(-5px);
+    transform: translateX(-10px) translateY(-10px);
   }
   75% {
-    transform: translateX(5px) translateY(5px) rotate(-1deg);
+    transform: translateX(10px) translateY(10px) rotate(-1deg);
   }
 }
 
