--- a/view/style.less
+++ b/view/style.less
@@ -55,6 +55,10 @@ body, html {
   z-index: 2;
   transform-style: preserve-3d;
 
+  &.winner .body {
+    transform: rotate(45deg);
+  }
+
   .body {
     position: absolute;
     width: ~"calc(100% - 2px)";
@@ -516,4 +520,65 @@ body, html {
     }
   }
 
+}
+
+.winner {
+  .apple {
+    opacity: 0;
+        transition: all .2s ease-out;
+  }
+  .border {
+    border-color: transparent;
+    transition: all .2s ease-out;
+  }
+  .board {
+    transition: all .2s ease-out;
+    background: transparent;
+  }
+
+  .leader {
+    transition: all .2s ease-out;
+    opacity: 0;
+  }
+
+  .snek {
+
+    // transition: opacity 2.5s ease-in;
+    // opacity: 0;
+  }
+}
+
+
+
+
+
+
+
+.spawn {
+  position: absolute;
+  z-index: 1;
+  opacity: 1;
+  transform-style: preserve-3d;
+
+  .body {
+    animation: spawnShock 1s ease-out;
+    animation-fill-mode: forward;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    border: solid 2px white;
+    box-sizing: border-box;
+  }
+}
+
+@keyframes spawnShock {
+  0% {
+    transform: scale(1.2);
+    opacity: .7;
+  }
+  99% {
+    opacity: 0;
+    border-width: 1px;
+    transform: scale(5) rotate(180deg);
+  }
 }
