--- a/view/index.html
+++ b/view/index.html
@@ -2,6 +2,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet/less" href="style.less" type="text/css">
+    <link rel="icon" type="image/png" sizes="196x196" href="favicon.png">
     <title>Snakes on a Plane</title>
     <script src="jquery.js"></script>
     <script src="hammer.js"></script>
