Added some random death phrases

--- a/view/style.less
+++ b/view/style.less
@@ -388,8 +388,9 @@ body, html {
   transform-style: preserve-3d;
 
   .body {
-    background: white;
-    color: black;
+    // background: white;
+    color: white;
+    // color: black;
     white-space: nowrap;
     z-index: 3;
     padding: 5px 8px 5px 8px;
@@ -397,12 +398,36 @@ body, html {
     font-size: 18px;
     opacity: .9;
     top: 0;
-    left: 0;
+    left: -110px;
+    text-align: center;
+    width: 200px;
     transform: translateY(-25px) translateX(10px) translateZ(20px) rotateX(-45deg);
+    animation: messagePop 1.5s ease-out;
+    animation-fill-mode: forwards;
+    text-transform: uppercase;
   }
 
-  // transition: linear .2s all;
-  // transform: translateY(-25px) translateX(10px);
+}
+
+@keyframes messagePop {
+  0% {
+    transform: translateY(-25px) translateX(10px) translateZ(10px) rotateX(-45deg);
+    opacity: 0;
+  }
+  20% {
+    transform: translateY(-25px) translateX(10px) translateZ(30px) rotateX(-45deg);
+    opacity: 1;
+  }
+  90% {
+    transform: translateY(-25px) translateX(10px) translateZ(30px) rotateX(-45deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-25px) translateX(10px) translateZ(65px) rotateX(-45deg);
+    opacity: 0;
+  }
+
+
 }
 
 
