--- a/client/style.less
+++ b/client/style.less
@@ -358,6 +358,7 @@ body, html {
   display: none;
   position: absolute;
   bottom: 0;
+  left: 0;
   padding-bottom: 20px;
   width: 100%;
   text-align: center;
@@ -432,6 +433,7 @@ body, html {
 .leader {
   position: absolute;
   top: 0;
+  left: 0;
   width: 100%;
   text-align: center;
   padding-top: 25px;
