Re-did the particle engine, added a cleanupGame to nuke extra snakes.

--- a/client/style.less
+++ b/client/style.less
@@ -230,13 +230,6 @@ body, html {
   color: #999;
 }
 
-.particle {
-  // background: pink;
-  position: absolute;
-  top:0;
-  left: 0;
-}
-
 .boom {
   position: absolute;
   z-index: 99999999;
@@ -674,4 +667,15 @@ body, html {
 
 .smear {
   transform-origin: top;
+}
+
+
+
+.blank-particle {
+  position: absolute;
+  display: none;
+  top: 0:
+  left: 0;
+  height: 15px;
+  width: 15px;
 }
