added max chat and max name length

--- a/client/style.less
+++ b/client/style.less
@@ -361,20 +361,19 @@ body, html {
     color: white;
     white-space: nowrap;
     z-index: 3;
-    padding: 5px 8px 5px 8px;
+    padding: 5px 0;
     position: absolute;
     font-size: 18px;
     opacity: .9;
     top: 0;
-    left: -110px;
+    left: -130px;
     text-align: center;
-    width: 200px;
+    width: 260px;
     transform: translateY(-25px) translateX(10px) translateZ(20px) rotateX(-45deg);
     animation: messagePop 1.5s ease-out;
     animation-fill-mode: forwards;
     text-transform: uppercase;
   }
-
 }
 
 @keyframes messagePop {
