--- a/client/style.less
+++ b/client/style.less
@@ -34,6 +34,25 @@ body, html {
   transform-style: preserve-3d;
 }
 
+.grid-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 3;
+  background-image: repeating-linear-gradient(90deg, //↘
+        #111, #111 1px, //5px
+        rgba(0,0,0,0) 1px , rgba(0,0,0,0) 18px, //100px
+        #111 18px, #111 20px, //5px
+     ),
+     repeating-linear-gradient(180deg, //↘
+        #111, #111 1px, //5px
+        rgba(0,0,0,0) 1px, rgba(0,0,0,0) 18px, //100px
+        #111 18px, #111 20px, //5px
+     );
+}
+
 .border {
   content: " ";
   position: absolute;
@@ -92,6 +111,7 @@ body, html {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 4;
 
   .body {
     position: absolute;
@@ -544,9 +564,13 @@ body, html {
     transition: all .2s ease-out;
   }
 
+  .grid-overlay {
+    display: none;
+  }
+
   .apple {
     opacity: 0;
-        transition: all .2s ease-out;
+    transition: all .2s ease-out;
   }
   .border {
     border-color: transparent;
@@ -571,7 +595,7 @@ body, html {
 
 .spawn {
   position: absolute;
-  z-index: 1;
+  z-index: 4;
   opacity: 1;
   transform-style: preserve-3d;
 
@@ -638,13 +662,13 @@ body, html {
 .puff {
   background: rgba(255,255,255,.4);
   background: #555;
+  z-index: 5;
 }
 
 .smear {
   transform-origin: top;
+  z-index: 4;
 }
-
-
 
 .blank-particle {
   position: absolute;
@@ -655,6 +679,8 @@ body, html {
   width: 15px;
 }
 
-.warpskid {
-  // border-radius: 50%;
+.underblast {
+  z-index: 2;
+  position: absolute;
+  border-radius: 50%;
 }
