Cleaned up crappy snake for loop iteration

--- a/client/style.less
+++ b/client/style.less
@@ -540,6 +540,8 @@ body, html {
 }
 
 
+// When we fade everything out except the winning snake
+
 [mode='winner'] {
   color: white;
   font-weight: bold;
@@ -572,11 +574,9 @@ body, html {
         &:last-child {
           border: none;
         }
-
       }
     }
   }
-
 }
 
 .winner {
