Added some minor sounds

--- a/client/style.less
+++ b/client/style.less
@@ -633,12 +633,12 @@ body, html {
 @keyframes spawnShock {
   0% {
     transform: scale(1.2);
-    opacity: .7;
+    opacity: .5;
   }
   99% {
     opacity: 0;
     border-width: 1px;
-    transform: scale(5) rotate(180deg);
+    transform: scale(5);
   }
 }
 
