Fixed chat bug, decreased bomb wait time, increased turbo charge.

--- a/client/style.less
+++ b/client/style.less
@@ -399,7 +399,7 @@ body, html {
     color: rgba(255,255,255,.6);
     border: none;
     font-size: 26px;
-    width: 65%;
+    width: 400px;
     padding: 0 0 8px 0px;
     border-bottom: solid 2px rgba(255,255,255,.2);
 
@@ -434,7 +434,7 @@ body, html {
     text-align: center;
     width: 260px;
     transform: translateY(-25px) translateX(10px) translateZ(20px) rotateX(-45deg);
-    animation: messagePop 1.5s ease-out;
+    animation: messagePop 2.25s ease-out;
     animation-fill-mode: forwards;
     text-transform: uppercase;
   }
