--- a/client/style.less
+++ b/client/style.less
@@ -78,19 +78,22 @@ body, html {
   }
 
   &.player-snake.not-moving .body {
-    // outline: 10px solid rgba(255,255,255,.2);
-    animation: .2s ease-out playerIndicator infinite;
+    animation: .2s ease-out playerIndicator infinite; //Outline around player character
   }
 
   &.charged .body {
     &:after {
       background: white;
+      opacity: .6;
       position: absolute;
       content: "";
       left: 0;
       width: 100%;
       height: 100%;
-      animation: .05s linear chargeIndicator infinite;
+      // left: 25%;
+      top: 0;
+      // transform: translateZ(10px);
+
     }
   }
 
@@ -101,11 +104,6 @@ body, html {
     top: 1px;
     left: 1px;
   }
-}
-
-@keyframes chargeIndicator {
-  0% { opacity: .4;}
-  100% { opacity: 0;}
 }
 
 @keyframes flicker {
