Cleaned up bomb function and randomizing board size

--- a/client/style.less
+++ b/client/style.less
@@ -27,7 +27,7 @@ body, html {
 
 .board {
   position: relative;
-  background: #111;
+  background: #1a1a1a;
   margin: 0 auto;
   width: 0;
   height: 0;
