--- a/touchpad/style.css
+++ b/touchpad/style.css
@@ -1,3 +1,10 @@
+* {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+
 body {
   position: absolute;
   top: 0;
